chore: fix jdk problem